@@ -22,8 +22,6 @@
 #include "ace/OS_NS_stdlib.h"
 #include "ace/Truncate.h"
 
-
-
 ACE_BEGIN_VERSIONED_NAMESPACE_DECL
 
 ACE_ALLOC_HOOK_DEFINE(ACE_High_Res_Timer)
@@ -73,7 +71,6 @@ ACE_BEGIN_VERSIONED_NAMESPACE_DECL
 // set, and if high resolution timers are supported.
 /* static */
 int ACE_High_Res_Timer::global_scale_factor_status_ = 0;
-
 
 #if defined (ACE_LINUX)
 // Determine the apparent CPU clock speed from /proc/cpuinfo
